added categories to post header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,11 @@
 		<nav>
 			<ul id="links">
 				<li><a href="/">Home</a></li>
-				<li><a href="/archive">Archive</a></li>
 				<li><a href="/about">About</a></li>
 				<li><a href="{{ site.feedburner_url }}">Feed</a></li>
 				<li><a href="{{ site.twitter_url }}">Twitter</a></li>
+				<li><a href="https://plus.google.com/105732380067616322096/posts">Google+</a></li>
+        <li><a href="http://sethetter.com" class="float-right">sethetter.com</a></li>
 			</ul>
 		</nav>
 	</section>
