--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,8 @@ layout: default
 		
 	<header class="article-header">
 		<h1><a href="{{ page.url }}">{{ page.title }}</a></h1>
-		<p class="postdate">{{ page.date | date: "%d %B %Y" }}</p>
+      <p class="postcategories">{{ post.categories }}</p>
+      <p class="postdate">{{ page.date | date: "%d %B %Y" }}</p>
 	</header>
 		
 	{{ content }}
