--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -179,7 +179,7 @@ nav {
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   border-radius: 5px;
-  margin-bottom: 0;
+  margin-bottom: 10px;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #777777), color-stop(100%, #515151));
   background-image: -webkit-linear-gradient(#777777, #515151);
   background-image: -moz-linear-gradient(#777777, #515151);
@@ -266,27 +266,26 @@ nav li a:active {
   font-style: italic;
   margin: 5px 0 0 0;
   padding: 0;
-  float: right;
 }
 
-/* line 100, ../sass/screen.scss */
+/* line 99, ../sass/screen.scss */
 #content-section {
   margin-bottom: 35px;
 }
 
-/* line 104, ../sass/screen.scss */
+/* line 103, ../sass/screen.scss */
 .view-comments a {
   font-style: italic;
 }
 
-/* line 108, ../sass/screen.scss */
+/* line 107, ../sass/screen.scss */
 .article_seperator {
   border-top: 1px solid #bebebe;
   height: 10px;
   margin-top: 60px;
 }
 
-/* line 110, ../sass/screen.scss */
+/* line 109, ../sass/screen.scss */
 #page-footer {
   padding: 15px;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #777777), color-stop(100%, #515151));
@@ -303,18 +302,18 @@ nav li a:active {
   border-radius: 5px;
   margin: 50px 0 30px 0;
 }
-/* line 111, ../sass/screen.scss */
+/* line 110, ../sass/screen.scss */
 #page-footer ul {
   margin: 0;
   padding: 0;
 }
-/* line 112, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 #page-footer li {
   list-style: none;
   display: inline;
   padding: 0;
 }
-/* line 113, ../sass/screen.scss */
+/* line 112, ../sass/screen.scss */
 #page-footer a {
   color: #f1f1f1;
 }
@@ -335,17 +334,17 @@ nav li a:active {
   color: #d7d7d7;
 }
 
-/* line 117, ../sass/screen.scss */
+/* line 116, ../sass/screen.scss */
 .float-right {
   float: right;
 }
 
-/* line 121, ../sass/screen.scss */
+/* line 120, ../sass/screen.scss */
 code {
   font-family: monospace;
 }
 
-/* line 122, ../sass/screen.scss */
+/* line 121, ../sass/screen.scss */
 .highlight {
   background: #0f132b;
   margin-top: 20px;
@@ -360,392 +359,392 @@ code {
   color: #fff;
 }
 
-/* line 131, ../sass/screen.scss */
+/* line 130, ../sass/screen.scss */
 .hll {
   background-color: #384b87;
 }
 
-/* line 132, ../sass/screen.scss */
+/* line 131, ../sass/screen.scss */
 .c {
   color: #bcbcbc;
   font-style: italic;
 }
 
 /* Comment */
-/* line 133, ../sass/screen.scss */
+/* line 132, ../sass/screen.scss */
 .err {
   border: 1px solid #ffc66d;
 }
 
 /* Error */
-/* line 134, ../sass/screen.scss */
+/* line 133, ../sass/screen.scss */
 .k {
   color: #a2b4d6;
   font-weight: bold;
 }
 
 /* Keyword */
-/* line 135, ../sass/screen.scss */
+/* line 134, ../sass/screen.scss */
 .o {
   color: #fff;
 }
 
 /* Operator */
-/* line 136, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 .cm {
   color: #bcbcbc;
   font-style: italic;
 }
 
 /* Comment.Multiline */
-/* line 137, ../sass/screen.scss */
+/* line 136, ../sass/screen.scss */
 .cp {
   color: #BC7A00;
 }
 
 /* Comment.Preproc */
-/* line 138, ../sass/screen.scss */
+/* line 137, ../sass/screen.scss */
 .c1 {
   color: #bcbcbc;
   font-style: italic;
 }
 
 /* Comment.Single */
-/* line 139, ../sass/screen.scss */
+/* line 138, ../sass/screen.scss */
 .cs {
   color: #bcbcbc;
   font-style: italic;
 }
 
 /* Comment.Special */
-/* line 140, ../sass/screen.scss */
+/* line 139, ../sass/screen.scss */
 .gd {
   color: #A00000;
 }
 
 /* Generic.Deleted */
-/* line 141, ../sass/screen.scss */
+/* line 140, ../sass/screen.scss */
 .ge {
   font-style: italic;
 }
 
 /* Generic.Emph */
-/* line 142, ../sass/screen.scss */
+/* line 141, ../sass/screen.scss */
 .gr {
   color: #FF0000;
 }
 
 /* Generic.Error */
-/* line 143, ../sass/screen.scss */
+/* line 142, ../sass/screen.scss */
 .gh {
   color: #000080;
   font-weight: bold;
 }
 
 /* Generic.Heading */
-/* line 144, ../sass/screen.scss */
+/* line 143, ../sass/screen.scss */
 .gi {
   color: #00A000;
 }
 
 /* Generic.Inserted */
-/* line 145, ../sass/screen.scss */
+/* line 144, ../sass/screen.scss */
 .go {
   color: #808080;
 }
 
 /* Generic.Output */
-/* line 146, ../sass/screen.scss */
+/* line 145, ../sass/screen.scss */
 .gp {
   color: #000080;
   font-weight: bold;
 }
 
 /* Generic.Prompt */
-/* line 147, ../sass/screen.scss */
+/* line 146, ../sass/screen.scss */
 .gs {
   font-weight: bold;
 }
 
 /* Generic.Strong */
-/* line 148, ../sass/screen.scss */
+/* line 147, ../sass/screen.scss */
 .gu {
   color: #800080;
   font-weight: bold;
 }
 
 /* Generic.Subheading */
-/* line 149, ../sass/screen.scss */
+/* line 148, ../sass/screen.scss */
 .gt {
   color: #0040D0;
 }
 
 /* Generic.Traceback */
-/* line 150, ../sass/screen.scss */
+/* line 149, ../sass/screen.scss */
 .kc {
   color: #f7e64a;
   font-weight: bold;
 }
 
 /* Keyword.Constant */
-/* line 151, ../sass/screen.scss */
+/* line 150, ../sass/screen.scss */
 .kd {
   color: #f7e64a;
   font-weight: bold;
 }
 
 /* Keyword.Declaration */
-/* line 152, ../sass/screen.scss */
+/* line 151, ../sass/screen.scss */
 .kn {
   color: #f7e64a;
   font-weight: bold;
 }
 
 /* Keyword.Namespace */
-/* line 153, ../sass/screen.scss */
+/* line 152, ../sass/screen.scss */
 .kp {
   color: #f7e64a;
 }
 
 /* Keyword.Pseudo */
-/* line 154, ../sass/screen.scss */
+/* line 153, ../sass/screen.scss */
 .kr {
   color: #f7e64a;
   font-weight: bold;
 }
 
 /* Keyword.Reserved */
-/* line 155, ../sass/screen.scss */
+/* line 154, ../sass/screen.scss */
 .kt {
   color: #B00040;
 }
 
 /* Keyword.Type */
-/* line 156, ../sass/screen.scss */
+/* line 155, ../sass/screen.scss */
 .m {
   color: #7ad753;
 }
 
 /* Literal.Number */
-/* line 157, ../sass/screen.scss */
+/* line 156, ../sass/screen.scss */
 .s {
   color: #7ad753;
 }
 
 /* Literal.String */
-/* line 158, ../sass/screen.scss */
+/* line 157, ../sass/screen.scss */
 .na {
   color: #da4939;
 }
 
 /* Name.Attribute */
-/* line 159, ../sass/screen.scss */
+/* line 158, ../sass/screen.scss */
 .nb {
   color: #6d9cbe;
 }
 
 /* Name.Builtin */
-/* line 160, ../sass/screen.scss */
+/* line 159, ../sass/screen.scss */
 .nc {
   color: #ffc66d;
   font-weight: bold;
 }
 
 /* Name.Class */
-/* line 161, ../sass/screen.scss */
+/* line 160, ../sass/screen.scss */
 .no {
   color: #6d9cbe;
 }
 
 /* Name.Constant */
-/* line 162, ../sass/screen.scss */
+/* line 161, ../sass/screen.scss */
 .nd {
   color: #dc4939;
 }
 
 /* Name.Decorator */
-/* line 163, ../sass/screen.scss */
+/* line 162, ../sass/screen.scss */
 .ni {
   color: #f77a20;
   font-weight: bold;
 }
 
 /* Name.Entity */
-/* line 164, ../sass/screen.scss */
+/* line 163, ../sass/screen.scss */
 .ne {
   color: #D2413A;
   font-weight: bold;
 }
 
 /* Name.Exception */
-/* line 165, ../sass/screen.scss */
+/* line 164, ../sass/screen.scss */
 .nf {
   color: #ffc66d;
 }
 
 /* Name.Function */
-/* line 166, ../sass/screen.scss */
+/* line 165, ../sass/screen.scss */
 .nl {
   color: #A0A000;
 }
 
 /* Name.Label */
-/* line 167, ../sass/screen.scss */
+/* line 166, ../sass/screen.scss */
 .nn {
   color: #ffc66d;
   font-weight: bold;
 }
 
 /* Name.Namespace */
-/* line 168, ../sass/screen.scss */
+/* line 167, ../sass/screen.scss */
 .nt {
   color: #6d9cbe;
   font-weight: bold;
 }
 
 /* Name.Tag */
-/* line 169, ../sass/screen.scss */
+/* line 168, ../sass/screen.scss */
 .nx {
   color: #6d9cbe;
 }
 
-/* line 170, ../sass/screen.scss */
+/* line 169, ../sass/screen.scss */
 .nv {
   color: #ffffff;
 }
 
 /* Name.Variable */
-/* line 171, ../sass/screen.scss */
+/* line 170, ../sass/screen.scss */
 .ow {
   color: #dc4939;
   font-weight: bold;
 }
 
 /* Operator.Word */
-/* line 172, ../sass/screen.scss */
+/* line 171, ../sass/screen.scss */
 .w {
   color: #f77a20;
 }
 
 /* Text.Whitespace */
-/* line 173, ../sass/screen.scss */
+/* line 172, ../sass/screen.scss */
 .mf {
   color: #999999;
 }
 
 /* Literal.Number.Float */
-/* line 174, ../sass/screen.scss */
+/* line 173, ../sass/screen.scss */
 .mh {
   color: #999999;
 }
 
 /* Literal.Number.Hex */
-/* line 175, ../sass/screen.scss */
+/* line 174, ../sass/screen.scss */
 .mi {
   color: #999999;
 }
 
 /* Literal.Number.Integer */
-/* line 176, ../sass/screen.scss */
+/* line 175, ../sass/screen.scss */
 .mo {
   color: #999999;
 }
 
 /* Literal.Number.Oct */
-/* line 177, ../sass/screen.scss */
+/* line 176, ../sass/screen.scss */
 .sb {
   color: #7ad753;
 }
 
 /* Literal.String.Backtick */
-/* line 178, ../sass/screen.scss */
+/* line 177, ../sass/screen.scss */
 .sc {
   color: #7ad753;
 }
 
 /* Literal.String.Char */
-/* line 179, ../sass/screen.scss */
+/* line 178, ../sass/screen.scss */
 .sd {
   color: #7ad753;
   font-style: italic;
 }
 
 /* Literal.String.Doc */
-/* line 180, ../sass/screen.scss */
+/* line 179, ../sass/screen.scss */
 .s2 {
   color: #7ad753;
 }
 
 /* Literal.String.Double */
-/* line 181, ../sass/screen.scss */
+/* line 180, ../sass/screen.scss */
 .se {
   color: #BB6622;
   font-weight: bold;
 }
 
 /* Literal.String.Escape */
-/* line 182, ../sass/screen.scss */
+/* line 181, ../sass/screen.scss */
 .sh {
   color: #7ad753;
 }
 
 /* Literal.String.Heredoc */
-/* line 183, ../sass/screen.scss */
+/* line 182, ../sass/screen.scss */
 .si {
   color: #BB6688;
   font-weight: bold;
 }
 
 /* Literal.String.Interpol */
-/* line 184, ../sass/screen.scss */
+/* line 183, ../sass/screen.scss */
 .sx {
   color: #f7e64a;
 }
 
 /* Literal.String.Other */
-/* line 185, ../sass/screen.scss */
+/* line 184, ../sass/screen.scss */
 .sr {
   color: #BB6688;
 }
 
 /* Literal.String.Regex */
-/* line 186, ../sass/screen.scss */
+/* line 185, ../sass/screen.scss */
 .s1 {
   color: #7ad753;
 }
 
 /* Literal.String.Single */
-/* line 187, ../sass/screen.scss */
+/* line 186, ../sass/screen.scss */
 .ss {
   color: #ffffff;
 }
 
 /* Literal.String.Symbol */
-/* line 188, ../sass/screen.scss */
+/* line 187, ../sass/screen.scss */
 .bp {
   color: #f7e64a;
 }
 
 /* Name.Builtin.Pseudo */
-/* line 189, ../sass/screen.scss */
+/* line 188, ../sass/screen.scss */
 .vc {
   color: #ffffff;
 }
 
 /* Name.Variable.Class */
-/* line 190, ../sass/screen.scss */
+/* line 189, ../sass/screen.scss */
 .vg {
   color: #ffffff;
 }
 
 /* Name.Variable.Global */
-/* line 191, ../sass/screen.scss */
+/* line 190, ../sass/screen.scss */
 .vi {
   color: #ffffff;
 }
 
 /* Name.Variable.Instance */
-/* line 192, ../sass/screen.scss */
+/* line 191, ../sass/screen.scss */
 .il {
   color: #999999;
 }
