--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -190,7 +190,7 @@ nav {
 /* line 62, ../sass/screen.scss */
 nav ul {
   margin: 0;
-  padding: 0;
+  padding: 0 5px 0 0;
 }
 /* line 63, ../sass/screen.scss */
 nav li {
