--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -77,6 +77,7 @@ nav {
   h1 {
     padding-top:10px;
     line-height:1em;
+    font-size:2em;
     margin-top:0;
     a { @include link-colors($link-hover, $link-normal, $link-normal, $link-hover, $link-normal); }
   }
