--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -97,6 +97,13 @@ nav {
   }
 }
 
+.article {
+  h1 {
+    font-size:1.9em;
+    margin-bottom:0.3em;
+  }
+}
+
 #content-section {
   margin-bottom: 35px;
 }
