fix syntax highlighting

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -137,7 +137,7 @@ code { font-family: monospace; }
 }
 .hll { background-color: #384b87 }
 .c { color: #bcbcbc; font-style: italic } /* Comment */
-.err { border: 1px solid #ffc66d } /* Error */
+// .err { border: 1px solid #ffc66d } /* Error */
 .k { color: #a2b4d6; font-weight: bold } /* Keyword */
 .o { color: #fff } /* Operator */
 .cm { color: #bcbcbc; font-style: italic } /* Comment.Multiline */
