changed syntax highlighting again

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -155,7 +155,7 @@ code { font-family: monospace; }
 .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
 .gt { color: #0040D0 } /* Generic.Traceback */
 .kc { color: #f7e64a; font-weight: bold } /* Keyword.Constant */
-.kd { color: #f7e64a; font-weight: bold } /* Keyword.Declaration */
+.kd { color: #ff5600; font-weight: bold } /* Keyword.Declaration */
 .kn { color: #f7e64a; font-weight: bold } /* Keyword.Namespace */
 .kp { color: #f7e64a } /* Keyword.Pseudo */
 .kr { color: #f7e64a; font-weight: bold } /* Keyword.Reserved */
@@ -173,7 +173,7 @@ code { font-family: monospace; }
 .nl { color: #A0A000 } /* Name.Label */
 .nn { color: #ffc66d; font-weight: bold } /* Name.Namespace */
 .nt { color: #6d9cbe; font-weight: bold } /* Name.Tag */
-.nx { color: #6d9cbe; }
+.nx { color: #fbf25a; }
 .nv { color: #ffffff } /* Name.Variable */
 .ow { color: #dc4939; font-weight: bold } /* Operator.Word */
 .w { color: #f77a20 } /* Text.Whitespace */
