--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -489,7 +489,7 @@ code {
 /* Keyword.Constant */
 /* line 158, ../sass/screen.scss */
 .kd {
-  color: #f7e64a;
+  color: #ff5600;
   font-weight: bold;
 }
 
@@ -605,7 +605,7 @@ code {
 /* Name.Tag */
 /* line 176, ../sass/screen.scss */
 .nx {
-  color: #6d9cbe;
+  color: #fbf25a;
 }
 
 /* line 177, ../sass/screen.scss */
