syntax highlighting agaaaiiinnnnn

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -173,7 +173,7 @@ code { font-family: monospace; }
 .nl { color: #A0A000 } /* Name.Label */
 .nn { color: #ffc66d; font-weight: bold } /* Name.Namespace */
 .nt { color: #6d9cbe; font-weight: bold } /* Name.Tag */
-.nx { color: #fbf25a; }
+.nx { color: #fff; }
 .nv { color: #ffffff } /* Name.Variable */
 .ow { color: #dc4939; font-weight: bold } /* Operator.Word */
 .w { color: #f77a20 } /* Text.Whitespace */
